CAR-2825 : Add java options to avoid java task being killed in container