@@ -4,6 +4,6 @@ LABEL maintainer="DevOps <ops@commercetools.de>"
 
 COPY service/build/libs/commercetools-payone-integration.jar /build/commercetools-payone-integration.jar
 
-CMD exec java $JAVA_OPTS -jar /build/commercetools-payone-integration.jar
+CMD exec java $JAVA_OPTS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar /build/commercetools-payone-integration.jar
 
 EXPOSE 8080
